@@ -2,5 +2,6 @@
 Sample_ID,Sample_Name,GenomeFolder,Index,Index2,bait_name,default_library_type,default_tag_sequence,default_tagtwo_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,project_id,project_name,purpose,qc_state,request_id,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_description,sample_donor_id,sample_id,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,gbs_plex_name,
 20314922,mxPCR7155682,,ATCACGTT,AGGCGAAG,,GbS standard,ATCACGTT,AGGCGAAG,blah@sanger.ac.uk blah2@sanger.ac.uk,blah@sanger.ac.uk,blah2@sanger.ac.uk,blah2@sanger.ac.uk,0,0,20315681,0,20314922,,,S0910,,,standard,,,from:100 to:1000,,,,0,,mxPCR7155682,3373451,mxPCR7155682,,,HAPMAP5265538,,EGAS00001002541,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0D%0A,4825,Multiplex PCR R%26D for Agena%2FFluidigm replacement,Homo_sapiens (GRCh38_15),0,Flexible multiplex PCR for genotyping-by-sequencing,1,Hs_MajorQC,
 20314923,mxPCR7155683,,CGATGTTT,AGGCGAAG,,GnT MDA,CGATGTTT,AGGCGAAG,blah@sanger.ac.uk blah2@sanger.ac.uk,blah@sanger.ac.uk,blah2@sanger.ac.uk,blah2@sanger.ac.uk,0,0,20315681,0,20314923,,,S0910,,,standard,,,from:100 to:1000,,,,0,,mxPCR7155683,3373452,mxPCR7155683,,,HAPMAP5265539,,EGAS00001002541,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0D%0A,4825,Multiplex PCR R%26D for Agena%2FFluidigm replacement,Homo_sapiens (GRCh38_15),0,Flexible multiplex PCR for genotyping-by-sequencing,2,Hs_MajorQC,
-20314924,mxPCR7155684,,CGATGTTT,AGGCGAAG,,GBS,TTAGGCAT,AGGCGAAG,blah@sanger.ac.uk blah2@sanger.ac.uk,blah@sanger.ac.uk,blah2@sanger.ac.uk,blah2@sanger.ac.uk,0,0,20315681,0,20314922,,,S0910,,,standard,,,from:100 to:1000,,,,0,,mxPCR7155683,3373452,mxPCR7155683,,,HAPMAP5265539,,EGAS00001002541,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0D%0A,3597,Blah,Homo_sapiens (GRCh38_15),0,Blah,3,Hs_MajorQC,
-20314925,mxPCR7155685,,TGACCACT,AGGCGAAG,,GBS,TGACCACT,AGGCGAAG,blah@sanger.ac.uk blah2@sanger.ac.uk,blah@sanger.ac.uk,blah2@sanger.ac.uk,blah2@sanger.ac.uk,0,0,20315681,0,20314923,,,S0910,,,standard,,,from:100 to:1000,,,,0,,mxPCR7155683,3373454,mxPCR7155684,,,HAPMAP5265540,,EGAS00001002543,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0D%0A,2410,Blah,Homo_sapiens (GRCh38_15),0,Blah,4,Hs_MajorQC,
+20314924,mxPCR7155684,,CGATGTTT,AGGCGAAG,,GBS,TTAGGCAT,AGGCGAAG,blah@sanger.ac.uk blah2@sanger.ac.uk,blah@sanger.ac.uk,blah2@sanger.ac.uk,blah2@sanger.ac.uk,0,0,20315681,0,20314922,,,S0910,,,standard,,,from:100 to:1000,,,,0,,mxPCR7155684,3373452,mxPCR7155684,,,HAPMAP5265539,,EGAS00001002541,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0D%0A,3597,Blah,Homo_sapiens (GRCh38_15),0,Blah,3,Hs_MajorQC,
+20314925,mxPCR7155685,,TGACCACT,AGGCGAAG,,GBS,TGACCACT,AGGCGAAG,blah@sanger.ac.uk blah2@sanger.ac.uk,blah@sanger.ac.uk,blah2@sanger.ac.uk,blah2@sanger.ac.uk,0,0,20315681,0,20314923,,,S0910,,,standard,,,from:100 to:1000,,,,0,,mxPCR7155685,3373454,mxPCR7155685,,,HAPMAP5265540,,EGAS00001002543,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0D%0A,2410,Blah,Homo_sapiens (GRCh38_15),0,Blah,4,Hs_MajorQC,
+20314926,mxPCR7155686,,ACAGTGGT,AGGCGAAG,,GBS,ACAGTGGT,AGGCGAAG,blah@sanger.ac.uk blah2@sanger.ac.uk,blah@sanger.ac.uk,blah2@sanger.ac.uk,blah2@sanger.ac.uk,0,0,20315681,0,20314923,,,S0910,,,standard,,,from:100 to:1000,,,,0,,mxPCR7155686,3373455,mxPCR7155686,,,HAPMAP5265540,,EGAS00001002543,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0D%0A,3597,Blah,Homo_sapiens (GRCh38_15),0,Blah,5,Not_stored,
